<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TvShowTracker</string>
    <string name="app_search_shows">Search for a TV show</string>
    <string name="app_tracked_shows">My tracked shows</string>
    <string name="app_all_episodes">All Arrow episodes</string>
    <string name="app_calendar_title">Today\'s shows</string>
    <string name="action_settings">Settings</string>
    
    <string name="tv_show_name">TV Show Name</string>
    <string name="tv_show_season">Season</string>
    <string name="tv_show_episode_title">Ep Title </string>
    <string name="tv_show_release_date">Aired on </string>
    <string name="show_overview_label">Overview</string>
    <string name="show_status_text_title">Status: Running</string>
    <string name="show_air_day_time_text">Airs on: Day at 5</string>
    <string name="show_network_label">Network</string>
    <string name="search_show_hint">Enter a TV show name</string>
    
    <string name="empty_list_calendar">No shows aired today.</string>
    <string name="empty_list_search">There are no TV Shows in this list.\nTry searching for something!</string>
    
    <string name="search_Show">Search</string>
    <string name="new_show">New Show</string>
    
    <string name="menu_search_shows_label">Search</string>
    <string name="menu_refresh_shows_label">Refresh</string>
    <string name="menu_delete_shows_label">Delete show</string>
    <string name="menu_update_shows_label">Update show</string>
    <string name="menu_sort_alphab_shows_label">Sort Alphabetically</string>
    
    
    <string name="saved_to_file_toast">Saved information!</string>
    <string name="fetched_info_toast">Fetched information!</string>
    <string name="error_fetched_toast">Could not find show.</string>
    <string name="enter_show_search_toast">Enter a show to search!</string>
    <string name="added_show_toast">Added shows to My Shows!</string>
    <string name="already_tracking_toast">Already tracking this show!</string>

    <string-array name="drawer_titles">
        <item>Search</item>
        <item>My Shows</item>
        <item>Calendar</item>
        <item>About</item>
	</string-array>
    
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_closed">Closed navigation drawer</string>
    
</resources>
