<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="4dp"
    style="?android:listSeparatorTextViewStyle" >

    <TextView
        android:id="@+id/tracked_show_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_value"
        android:paddingRight="@dimen/padding_value"
        android:text="@string/tv_show_name"
        android:textSize="@dimen/show_show_name_text_view_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tracked_show_season_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tracked_show_name_text_view"
        android:paddingLeft="@dimen/padding_value"
        android:paddingRight="@dimen/padding_value"
        android:paddingTop="@dimen/padding_value"
        android:textSize="@dimen/show_season_text_view_size"
        android:text="@string/tv_show_season" />

    <TextView
        android:id="@+id/tracked_show_episode_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tracked_show_name_text_view"
        android:layout_toRightOf="@id/tracked_show_season_text_view"
        android:layout_toEndOf="@id/tracked_show_season_text_view"
        android:paddingLeft="@dimen/padding_value"
        android:paddingRight="@dimen/padding_value"
        android:paddingTop="@dimen/padding_value"
        android:textSize="@dimen/show_episode_text_view_size"
        android:text="@string/tv_show_episode_title" />
</RelativeLayout>