<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="4dp"
    style="?android:listSeparatorTextViewStyle" >

    <TextView
        android:id="@+id/tv_show_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_value"
        android:paddingRight="@dimen/padding_value"
        android:text="@string/tv_show_name"
        android:textSize="@dimen/show_show_name_text_view_size"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/tv_show_season_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_show_name_text_view"
        android:paddingLeft="@dimen/padding_value"
        android:paddingRight="@dimen/padding_value"
        android:paddingTop="@dimen/padding_value"
        android:textSize="@dimen/show_season_text_view_size"
        android:text="@string/tv_show_season" 
        android:textColor="@color/show_subtitle_text_view_color" />

    <TextView
        android:id="@+id/show_status_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_show_name_text_view"
        android:layout_toRightOf="@id/tv_show_season_text_view"
        android:layout_toEndOf="@id/tv_show_season_text_view"
        android:paddingLeft="@dimen/padding_value"
        android:paddingRight="@dimen/padding_value"
        android:paddingTop="@dimen/padding_value"
        android:textSize="@dimen/show_season_text_view_size"
        android:text="@string/show_status_text_title"
        android:textColor="@color/show_subtitle_text_view_color"  />  
</RelativeLayout>